; ModuleID = '/home/carl/AnghaBench/http-parser/extr_test.c_check_num_eq.c'
source_filename = "/home/carl/AnghaBench/http-parser/extr_test.c_check_num_eq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.message = type { i8* }

@.str = private unnamed_addr constant [29 x i8] c"\0A*** Error: %s in '%s' ***\0A\0A\00", align 1
@.str.1 = private unnamed_addr constant [13 x i8] c"expected %d\0A\00", align 1
@.str.2 = private unnamed_addr constant [13 x i8] c"   found %d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.message*, i8*, i32, i32)* @check_num_eq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @check_num_eq(%struct.message* %0, i8* %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.message*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store %struct.message* %0, %struct.message** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %10 = load i32, i32* %8, align 4
  %11 = load i32, i32* %9, align 4
  %12 = icmp ne i32 %10, %11
  br i1 %12, label %13, label %23

13:                                               ; preds = %4
  %14 = load i8*, i8** %7, align 8
  %15 = load %struct.message*, %struct.message** %6, align 8
  %16 = getelementptr inbounds %struct.message, %struct.message* %15, i32 0, i32 0
  %17 = load i8*, i8** %16, align 8
  %18 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0), i8* %14, i8* %17)
  %19 = load i32, i32* %8, align 4
  %20 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.1, i64 0, i64 0), i32 %19)
  %21 = load i32, i32* %9, align 4
  %22 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.2, i64 0, i64 0), i32 %21)
  store i32 0, i32* %5, align 4
  br label %24

23:                                               ; preds = %4
  store i32 1, i32* %5, align 4
  br label %24

24:                                               ; preds = %23, %13
  %25 = load i32, i32* %5, align 4
  ret i32 %25
}

declare dso_local i32 @printf(i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
